RESOLVED FIXED231488
[IFC][Integration] Do not bail out on missing primary font
https://bugs.webkit.org/show_bug.cgi?id=231488
Summary [IFC][Integration] Do not bail out on missing primary font
alan
Reported 2021-10-10 10:15:54 PDT
we can handle non-primary fonts.
Attachments
Patch (3.71 KB, patch)
2021-10-10 10:19 PDT, alan
no flags
Patch (5.32 KB, patch)
2021-10-10 13:46 PDT, alan
no flags
alan
Comment 1 2021-10-10 10:19:27 PDT
alan
Comment 2 2021-10-10 13:46:38 PDT
EWS
Comment 3 2021-10-10 15:24:18 PDT
Committed r283879 (242756@main): <https://commits.webkit.org/242756@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 440735 [details].
Radar WebKit Bug Importer
Comment 4 2021-10-10 15:25:19 PDT
Note You need to log in before you can comment on or make changes to this bug.