[IFC][Integration] Do not bail out on missing primary font https://bugs.webkit.org/show_bug.cgi?id=231488

Reviewed by Antti Koivisto.

LayoutTests/imported/w3c:

* web-platform-tests/css/cssom-view/getBoundingClientRect-shy-expected.txt:

Source/WebCore:

IFC has non-primary font support now.

* layout/integration/LayoutIntegrationCoverage.cpp:
(WebCore::LayoutIntegration::printReason):
(WebCore::LayoutIntegration::canUseForFontAndText):
* layout/integration/LayoutIntegrationCoverage.h:


Canonical link: https://commits.webkit.org/242756@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283879 268f45cc-cd09-0410-ab3c-d52691b4dbfc